--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,17 @@
-.jumbotron {
 
+.jumbotron {
+	height: 400%;
+}
+
+.logo {
+	margin: auto;
+}
+
+.navbar .navbar-nav {
+    display: inline-block;
+    float: none;
+}
+
+.navbar .navbar-collapse {
+    text-align: center;
 }
