ajout lien vers app géomotifs

--- a/css/stylesheetHeader.css
+++ b/css/stylesheetHeader.css
@@ -1,9 +1,10 @@
 /*********************************************** HEADER ***************************************************************/
 .jumbotron {
 	height: 90vh;
+	width: 100vw;
 }
 
-.logo {
+.logoHeader {
 	margin: auto;
 }
 
