--- a/css/stylesheetProduits.css
+++ b/css/stylesheetProduits.css
@@ -6,6 +6,13 @@
 	text-align: center;
 }
 
+.lensRight {
+    width: 40%;
+    height: 40%;
+    margin: auto;
+    padding-top: 5%;
+}
+
 .logo {
 	width: 20%;
 	height: 20%;
