Boostrap trois_points

--- a/stylesheet_notre_philosophie.css
+++ b/stylesheet_notre_philosophie.css
@@ -1,5 +1,12 @@
+/* Notre philosophie */
+
+
+
+
+/* trois points */
+
 .point123 {
-    border: 2px solid cornflowerblue;
+    border: ;
 }
 
 .hidden-xs {
@@ -20,4 +27,5 @@
 
 .text_trois_points {
     text-align: center;
+
 }
