--- a/css/stylesheetFooter.css
+++ b/css/stylesheetFooter.css
@@ -1,26 +1,9 @@
-/*********************************************** HEADER ***************************************************************/
-.jumbotron {
-	height: 90vh;
-}
-
-.logo {
-	margin: auto;
-}
-
-.navbar.fixed {
-    position:fixed;
-    top:0;
-    z-index:1000;
-    opacity: 0.7;
-    width: 100%;
-}
-
-.navbar .navbar-nav {
-    display: inline-block;
-    float: none;
-}
-
-.navbar .navbar-collapse {
+.footer {
     text-align: center;
 }
-/*********************************************** / HEADER *************************************************************/
+
+.logoWild {
+    height: 20%;
+    width: 20%;
+    margin: auto;
+}
