--- a/css/stylesheetHeader.css
+++ b/css/stylesheetHeader.css
@@ -1,11 +1,37 @@
 /*********************************************** HEADER ***************************************************************/
+Header {
+    background-image: url("background-orange.JPG");
+    background-attachment: fixed;
+    width: 100vw;
+    color: black;
+}
+
 .jumbotron {
 	height: 90vh;
 	width: 100vw;
 }
+.backgroundHeader {
+    background-image: url("background-orange.JPG");
+    background-attachment: fixed;
+}
 
 .logoHeader {
 	margin: auto;
+    opacity: none;
+}
+
+.lienMenu {
+    color: #0f0f0f;
+    font-size: 200%;
+}
+
+.lienMenu:hover {
+    text-decoration: none;
+}
+
+.navbar {
+    background-image: url("background-orange.JPG");
+    background-attachment: fixed;
 }
 
 .navbar.fixed {
@@ -13,7 +39,7 @@
     top:0;
     z-index:1000;
     opacity: 0.7;
-    width: 100%;
+    width: 100vw;
 }
 
 .navbar .navbar-nav {
