--- a/css/stylesheet_social_network.css
+++ b/css/stylesheet_social_network.css
@@ -1,3 +1,11 @@
+#banner_social {
+    position: fixed;
+    top:600px;
+    width: 40px;
+
+
+}
+
 ul#banner_social img {
     width : 50px;
     height: 50px;
@@ -6,9 +14,34 @@ ul#banner_social img {
 ul#banner_social {
     list-style-type: none;
     position: fixed center right;
+    vertical-align: baseline;
+    float: right;
+    right: 60px;
 }
 
+/*  icones  */
 ul#banner_social li {
-    float: ;
-    margin:5px;
+    margin-bottom: 10px;
+    width: 50px;
+    margin-right : 60px;
+}
+
+
+.bloc_infos_FB {
+   /* position: absolute;
+    display: none;
+    width:300px;
+    min-height: 166px;
+    right: 50px;
+    -ms-word-wrap:;
+    word-wrap:break-word;
+    overflow-wrap: break-word;
+    background-color: #ffffff;*/
+}
+
+#FB-root {
+    /*position: absolute;
+    top: -10000px;
+    height: 0px;
+    width: 0px;*/
 }
