test sur police pour section image

--- a/css/stylesheetForm.css
+++ b/css/stylesheetForm.css
@@ -15,6 +15,7 @@ h3 {
     width: 50%;
     height: 50%;
     margin-top: 5%;
+    z-index: 1;
 }
 
 .lens:hover {
@@ -32,12 +33,6 @@ h3 {
     margin-top: 5%;
 }
 
-.imgInLens:hover {
-    -ms-transform: scale(2); /* IE 9 */
-    -webkit-transform: scale(2); /* Chrome, Safari, Opera */
-    transform: scale(2);
-    transition-duration: 1000ms;
-}
 
 .form-group {
     margin-right: 10%;
