--- a/css/stylesheetSectionImage.css
+++ b/css/stylesheetSectionImage.css
@@ -6,9 +6,12 @@
 }
 
 .textImage {
+	font-family: 'Courgette', cursive;
 	text-align: center;
 	margin: auto;
-	padding-top: 18%;
-	font-size: 200%;
+	padding-top: 15%;
+	font-size: 400%;
 	color: black;
+	text-shadow: 0px 20px 4px #0f0f0f;
+
 }
