supression de la legere marge blanche a droite, et affinement des background header et footer

--- a/css/stylesheetFooter.css
+++ b/css/stylesheetFooter.css
@@ -1,5 +1,7 @@
 .footer {
     font-family: 'DIN';
+    color: #0f0f0f;
+    font-size: 150%;
     text-align: center;
     margin: auto;
     padding-top: 2%;
@@ -8,7 +10,6 @@
 
 .lienFooter {
     color: #0f0f0f;
-    font-size: 150%;
 }
 
 .lienFooter:hover {
@@ -25,4 +26,6 @@
 #background {
     background-image: url(background-orange.JPG);
     background-attachment: fixed;
+    background-size: cover;
+    width: 100vw;
 }
