--- a/css/stylesheetForm.css
+++ b/css/stylesheetForm.css
@@ -7,6 +7,7 @@ h3 {
     color: #0f0f0f;
     background-image: url("../image/P1060347.jpg");
     background-attachment: fixed;
+    background-size: cover;
 }
 
 .lens {
