--- a/css/stylesheet_notre_philosophie.css
+++ b/css/stylesheet_notre_philosophie.css
@@ -42,9 +42,9 @@ p {
 }
 
 .banner_trois_points {
-    background-image: url("image/swirl3.png");
-    border-top:;
-    border-bottom: ;
+    background-image: url("../image/swirl3.png");
+    background-attachment: fixed;
+    background-size: cover;
     padding-top : 20px;
     padding-bottom: 20px;
 
