--- a/css/stylesheet_notre_philosophie.css
+++ b/css/stylesheet_notre_philosophie.css
@@ -1,6 +1,6 @@
 /* Notre philosophie */
 p {
-    font-size: 1.5em;
+    font-size: 1.2em;
 }
 
 .notre_philo {
@@ -12,7 +12,7 @@ p {
 
 .liste_philo {
     font-size: 1.5em;
-    text-align: left;
+    text-align: center;
 }
 
 
@@ -43,8 +43,9 @@ p {
 
 .banner_trois_points {
     background-image: url("image/swirl3.png");
-    border-top:;
-    border-bottom: ;
+    background-color: none;
+    border-top: 0px;
+    border-bottom: 0px;
     padding-top : 20px;
     padding-bottom: 20px;
 
