Changed path image swirl3.png in philosophie css

--- a/css/stylesheet_notre_philosophie.css
+++ b/css/stylesheet_notre_philosophie.css
@@ -43,7 +43,7 @@ p {
 
 .banner_trois_points {
 
-    background-image: url("image/swirl3.png");
+    background-image: url("../image/swirl3.png");
     background-color: none;
     background-attachment: fixed;
     padding-top : 20px;
