--- a/css/stylesheetHeader.css
+++ b/css/stylesheetHeader.css
@@ -58,11 +58,11 @@ Header {
 }
 
 .navbar.fixed {
-    position:fixed;
-    top:0;
-    z-index:1000;
+    position: fixed;
+    top: 0;
+    z-index: 1000;
     opacity: 0.7;
-    width: 100vw
+    width: 100vw;
 }
 
 .navbar .navbar-nav {
