add fonts Notre métier

--- a/css/stylesheet_notre_philosophie.css
+++ b/css/stylesheet_notre_philosophie.css
@@ -1,4 +1,18 @@
 /* Notre philosophie */
+.titreMetier {
+    font-size: 300%;
+    margin-bottom: 3%;
+}
+
+.notre_philo {
+    font-family: 'DIN';
+}
+
+.txt-presentation {
+    font-size: 200%;
+    margin-bottom: 1%;
+}
+
 p {
     font-size: 1.2em;
 }
@@ -11,8 +25,10 @@ p {
 }
 
 .liste_philo {
-    font-size: 1.5em;
+    margin-top: 3%;
+    font-size: 180%;
     text-align: center;
+    margin-bottom: 3%;
 }
 
 
