--- a/css/stylesheet_notre_philosophie.css
+++ b/css/stylesheet_notre_philosophie.css
@@ -68,7 +68,7 @@
 
 .banner_trois_points {
 
-    background-image: url("../image/swirl3.png");
+    background-image: url("../image/shattered2.png");
     background-color: none;
     background-attachment: fixed;
     padding-top : 20px;
