modif police section image

--- a/css/stylesheetSectionImage.css
+++ b/css/stylesheetSectionImage.css
@@ -7,7 +7,7 @@
 }
 
 .textImage {
-	font-family: 'Courgette', cursive;
+	font-family: 'DIN';
 	text-align: center;
 	margin: auto;
 	padding-top: 15%;
