--- a/css/stylesheetSectionImage.css
+++ b/css/stylesheetSectionImage.css
@@ -7,11 +7,12 @@
 }
 
 .textImage {
-	font-family: 'Courgette', cursive;
+	font-family: 'DIN-Regular';
+	font-style: italic;
 	text-align: center;
 	margin: auto;
-	padding-top: 15%;
-	font-size: 400%;
+	padding-top: 12%;
+	font-size: 450%;
 	color: black;
 }
 
