--- a/css/stylesheet_notre_philosophie.css
+++ b/css/stylesheet_notre_philosophie.css
@@ -9,7 +9,7 @@
 }
 
 .txt-presentation {
-    font-size: 200%;
+    font-size: 180%;
     margin-bottom: 1%;
 }
 
@@ -20,10 +20,19 @@
     text-align: center;
 }
 
-.liste_philo {
+.liste_philoA {
     margin-top: 3%;
-    font-size: 180%;
-    text-align: center;
+    font-size: 170%;
+    text-align: right;
+    margin-bottom: 3%;
+    list-style: none;
+}
+
+
+.liste_philoB {
+    margin-top: 3%;
+    font-size: 170%;
+    text-align: left;
     margin-bottom: 3%;
     list-style: none;
 }
@@ -72,7 +81,7 @@
 
 .banner_trois_points {
 
-    background-image: url("../image/shattered2.png");
+    background-image: url("../image/img_archi/ruelle_paysage_n&b_opacité50_2500x1018.jpeg");
     background-color: none;
     background-attachment: fixed;
     padding-top : 20px;
