--- a/css/stylesheet_social_network.css
+++ b/css/stylesheet_social_network.css
@@ -2,7 +2,7 @@
     position: fixed;
     top:600px;
     width: 40px;
-    z-index:1;
+    z-index: 1;
 }
 
 ul#banner_social img {
@@ -62,9 +62,17 @@ ul#banner_social.bouton_home {
 
 }
 
-
 .bouton_facebook_MLT:hover .fb-page {
     display: block;
+}
+
+/* Option d'affichage du logo Facebook orange au survol du logo */
+.hover_logo_FB {
+    display: none;
+}
+.bouton_facebook_MLT:hover .hover_logo_FB {
+    display: block;
+    z-index: 1;
 }
 
 
@@ -81,14 +89,15 @@ ul#banner_social.bouton_home {
 }
 
 
-/* Option d'affichage de la box Youtube au survol du logo */
-.yt-page {
+/* Option d'affichage du logo YouTube orange au survol du logo */
+.hover_logo_YT {
     display: none;
 }
-
-.bouton_youtube:hover .yt-page {
+.bouton_youtube:hover .hover_logo_YT {
     display: block;
+    z-index: 1;
 }
+
 
 /************************* Bouton retour haut de page ***********************************/
 #logo_home {
@@ -113,4 +122,13 @@ ul#logo_home {
     float: right;
     right: 60px;
     top: 820px;
+}
+
+/* Option d'affichage du logo Linkedin orange au survol du logo */
+.hover_logo_linkedin {
+    display: none;
+}
+.bouton_IN:hover .hover_logo_linkedin {
+    display: block;
+    z-index: 1;
 }
