--- a/css/stylesheetHeader.css
+++ b/css/stylesheetHeader.css
@@ -34,6 +34,7 @@ Header {
     text-align: center;
     font-family: 'DIN';
     font-size: 200%;
+    z-index: 999;
 }
 
 .navbar.fixed {
@@ -41,6 +42,18 @@ Header {
     top: 0;
     opacity: 0.7;
     width: 100%;
+    color: white;
+}
+
+.navbar .navbar-nav {
+    display: inline-block;
+    float: none;
+    color: white;
+}
+
+.navbar .navbar-collapse {
+    text-align: center;
+    color: white;
 }
 
 .lienMenu {
