--- a/css/stylesheetForm.css
+++ b/css/stylesheetForm.css
@@ -17,7 +17,7 @@ h3 {
     margin-left: 25%;
     width: 50%;
     height: 50%;
-    margin-top: 5%;
+    margin-top: 15%;
     z-index: 1;
 }
 
@@ -28,7 +28,7 @@ h3 {
     transition-duration: 1000ms;
 }
 
-.imgInLens {
+.imgInLensForm {
     position: absolute;
     margin-left: 25%;
     width: 50%;
