--- a/css/stylesheetForm.css
+++ b/css/stylesheetForm.css
@@ -1,7 +1,3 @@
-h3 {
-    font-size: 2000%;
-}
-
 .sectionForm {
     padding: 5%;
     color: #0f0f0f;
@@ -9,30 +5,17 @@ h3 {
     background-attachment: fixed;
     background-size: cover;
     width: 100%;
+    font-family: 'DIN';
 }
 
-.lens {
-    position: absolute;
-    top: 30%;
-    margin-left: 25%;
-    width: 50%;
-    height: 50%;
-    z-index: 1;
+.logolabo {
+    width: 40%;
+    height: 40%;
 }
 
-.lens:hover {
-    -ms-transform: rotate(45deg); /* IE 9 */
-    -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
-    transform: rotate(45deg);
-    transition-duration: 1000ms;
-}
-
-.imgInLensForm {
-    position: relative;
-    margin-left: 25%;
-    width: 50%;
-    height: 50%;
-    margin-top: 5%;
+.adresse {
+    margin-top: 10%;
+    text-align: center;
 }
 
 .catForm {
@@ -60,6 +43,6 @@ h3 {
     box-shadow: #EE6616;
 }
 
-.bouton{
-    background-color: #EE6616;
+.btn{
+    margin-left: 40%;
 }
