--- a/css/stylesheetProduits.css
+++ b/css/stylesheetProduits.css
@@ -6,14 +6,13 @@
 }
 
  .itunes {
-    margin-top: 20%;
-    width: 80%;
+    width: 50%;
+    position: absolute;
+    right: 0%;
  }
 
  .android {
-    margin-top: 20%;
-    width: 80%;
-    margin-left: 15%;
+    width: 50%;
  }
 
 .titreNosProduits {
