--- a/css/stylesheetActu.css
+++ b/css/stylesheetActu.css
@@ -38,3 +38,15 @@
 h1 {
     margin-top: 0px;
 }
+
+.slide {
+    padding: none;
+}
+
+.glyphicon {
+    color: #EE6616;
+}
+
+.orange {
+    color: #EE6616;
+}
