--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6349,7 +6349,7 @@ button.close {
 }
 .carousel-control:hover,
 .carousel-control:focus {
-  color: #fff;
+  color: #EE6616;
   text-decoration: none;
   filter: alpha(opacity=90);
   outline: 0;
@@ -6415,7 +6415,7 @@ button.close {
   width: 12px;
   height: 12px;
   margin: 0;
-  background-color: #fff;
+  background-color: #EE6616;
 }
 .carousel-caption {
   position: absolute;
