--- a/css/stylesheetHeader.css
+++ b/css/stylesheetHeader.css
@@ -5,7 +5,7 @@ Header {
     background-attachment: fixed;
     width: 100%;
     height: 40%;
-    font-family: 'DIN-Regular';
+    font-family: 'DIN-Bold' 'Courgette';
     text-align: center;
     color: white;
 }
