--- a/css/stylesheetProduits.css
+++ b/css/stylesheetProduits.css
@@ -41,14 +41,22 @@
 
 /* Bannière motifs */
 .banner_motifs {
-    margin:0 0 0 0;
+    margin:50px 0px 50px 0px;
     padding: 0 0 0 0;
 }
 
 .banner_motifs img {
-    width:;
+    width:100%
+    height: 100%;
     border-radius : 0px;
     margin: 0 0 0 0;
     padding: 0 0 0 0;
+}
+
+.colors {
+    display: inline-block;
+    background-color: floralwhite;
+    width: 100%;
+    height: 100%;
 }
 
