--- a/m-tourisme/src/MTLBundle/Resources/views/Default/index.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/index.html.twig
@@ -15,9 +15,15 @@
 
 {% block body %}
     {% block header %}
-        {{ include('MTLBundle:Default:header.html.twig') }}
+        {{  include('MTLBundle:Default:header.html.twig') }}
     {% endblock %}
-    {#{% block philo %}
-        {{ include('MTL:Default:notre_philosophie.html.twig') }}
-    {% endblock %}#}
+    {% block philo %}
+        {{ include('MTLBundle:Default:notre_philosophie.html.twig') }}
+    {% endblock %}
+    {% block sectionImage %}
+        {{ include('MTLBundle:Default:sectionImage.html.twig') }}
+    {% endblock %}
+    {% block footer %}
+        {{ include('MTLBundle:Default:footer.html.twig') }}
+    {% endblock %}
 {% endblock %}
